--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,6 @@ jobs:
             echo "${{ secrets.GITHUB_TOKEN }}" | sudo docker login ghcr.io -u $ --password-stdin
 
             sudo docker pull $IMAGE_ID:$VERSION
-            sudo docker stop $IMAGE_NAME || true
-            sudo docker rm $IMAGE_NAME || true
-            sudo docker run -d --name $IMAGE_NAME -p 80:80 $IMAGE_ID:$VERSION
+            sudo docker stop groundhog_web|| true
+            sudo docker rm groundhog_web || true
+            sudo docker run -d --name groundhog_web -p 80:80 $IMAGE_ID:$VERSION
