--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Create appsettings.json
+        run: |
+          echo "${{ secrets.APPSETTINGS }}" | base64 --decode > appsettings.json
 
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
