--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,5 +77,5 @@ jobs:
             sudo docker pull $IMAGE_ID:$VERSION
             sudo docker stop groundhog_web|| true
             sudo docker rm groundhog_web || true
-            sudo docker run -d --name groundhog_web -l "traefik.enable=true" -l "traefik.http.routers.groundhog_web.rule=Host(`groundhog.in`)" -l "traefik.http.routers.groundhog_web.entrypoints=web" $IMAGE_ID:$VERSION
+            sudo docker run -d --name groundhog_web --network=web -l "traefik.enable=true" -l "traefik.http.routers.groundhog_web.rule=Host(\`groundhog.in\`)" -l "traefik.http.routers.groundhog_web.entrypoints=web" $IMAGE_ID:$VERSION
 
